tests/error/0012.exl
a @ { x, x }: a
         ^ERROR
